--- a/src/components/Keyboard/Keyboard.scss
+++ b/src/components/Keyboard/Keyboard.scss
@@ -1,4 +1,4 @@
-.Abecedary {
+.Keyboard {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,7 +9,7 @@
   margin-top: 200px;
 }
 
-.Abecedary__keyboardLine {
+.Keyboard__keyboardLine {
   display: flex;
   flex-wrap: wrap;
 }
