--- a/src/components/Character/Character.scss
+++ b/src/components/Character/Character.scss
@@ -14,6 +14,10 @@
   cursor: pointer;
   font-size: inherit;
 
+  &:focus {
+    outline: none;
+  }
+
   &:hover {
     background-color: var(--color-warning);
   }
