--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,4 +15,5 @@
   --color-warning: hsl(0, 87%, 67%);
   --color-gray: hsl(0, 0%, 75%);
   --color-gray-dark: #9999a3;
+  --color-green: #7afabf;
 }
