--- a/src/components/Hangman/Hangman.scss
+++ b/src/components/Hangman/Hangman.scss
@@ -2,8 +2,6 @@
   position: relative;
   width: 400px;
   height: 400px;
-
-  background-color: red;
 }
 
 .Hangman__footer {
@@ -32,6 +30,16 @@
   position: absolute;
   top: 0;
   left: 100px;
+}
+
+.Hangman__bar--diagonal {
+  width: 50px;
+  height: 5px;
+  background-color: var(--color-secondary-darker);
+  position: absolute;
+  top: 22px;
+  left: 90px;
+  transform: rotate(-55deg);
 }
 
 .Hangman__bar--rope {
@@ -102,14 +110,4 @@
   top: 228px;
   left: 240px;
   transform: rotate(55deg);
-}
-
-.Hangman__person--diagonal {
-  width: 50px;
-  height: 5px;
-  background-color: var(--color-secondary-darker);
-  position: absolute;
-  top: 22px;
-  left: 90px;
-  transform: rotate(-55deg);
 }
