--- a/src/components/Keyboard/Keyboard.scss
+++ b/src/components/Keyboard/Keyboard.scss
@@ -1,12 +1,16 @@
 .Keyboard {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-width: 980px;
+  @media screen and (min-width: 1440px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 980px;
+  }
 }
 
 .Keyboard__keyboardLine {
-  display: flex;
-  flex-wrap: wrap;
+  @media screen and (min-width: 1440px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
