--- a/src/components/KeyboardTile/KeyboardTile.scss
+++ b/src/components/KeyboardTile/KeyboardTile.scss
@@ -1,26 +1,30 @@
 .KeyboardTile {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 30px;
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
-  font-weight: 700;
-  padding: 40px 45px;
-  border: 3px solid var(--color-secondary-darker);
-  border-spacing: 10px;
-  margin-top: -3px;
-  margin-left: -3px;
-  cursor: pointer;
-  font-size: inherit;
-  position: relative;
+  @media screen and (min-width: 1440px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    background-color: var(--color-primary);
+    color: var(--color-secondary);
+    font-weight: 700;
+    padding: 40px 45px;
+    border: 3px solid var(--color-secondary-darker);
+    border-spacing: 10px;
+    margin-top: -3px;
+    margin-left: -3px;
+    cursor: pointer;
+    font-size: inherit;
+    position: relative;
+  }
 
   &:focus {
     outline: none;
   }
 
   &:hover {
-    background-color: var(--color-gray);
+    @media screen and (min-width: 1440px) {
+      background-color: var(--color-gray);
+    }
   }
 
   &--correct, &--incorrect {
