--- a/src/components/UsedCharacter/UsedCharacter.scss
+++ b/src/components/UsedCharacter/UsedCharacter.scss
@@ -1,6 +1,8 @@
 .UsedCharacter {
-  font-size: 50px;
-  font-weight: 700;
+  @media screen and (min-width: 1440px) {
+    font-size: 50px;
+    font-weight: 700;
+  }
 
   &--primary {
     color: var(--color-primary);
