--- a/src/components/Word/Word.scss
+++ b/src/components/Word/Word.scss
@@ -1,16 +1,22 @@
 .Word {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  @media screen and (min-width: 1440px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .Word__character {
-  font-size: 50px;
-  font-weight: 700;
-  color: var(--color-secondary);
+  @media screen and (min-width: 1440px) {
+    font-size: 50px;
+    font-weight: 700;
+    color: var(--color-secondary);
+  }
 
-  &:not(:last-child) {
-    margin-right: 20px;
+  @media screen and (min-width: 1440px) {
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
   }
 }
