--- a/src/components/Hangy/Hangy.scss
+++ b/src/components/Hangy/Hangy.scss
@@ -1,7 +1,9 @@
 .Hangy {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100%;
+  @media screen and (min-width: 1440px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+  }
 }
